fix:items overflow

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: start;
     align-items: start;
-    height: 100vh;
+    min-height: 100vh;
     margin: 20px;
 }
 
